--- a/main.html
+++ b/main.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>My Salary Plans</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <h2>Things I will buy with my salary</h2>
+  <ol>
+    <li data-ns-test="shoppingList">Laptop</li>
+    <li data-ns-test="shoppingList">Smartphone</li>
+    <li data-ns-test="shoppingList">Noise-cancelling Headphones</li>
+  </ol>
+
+  <h2>Places I want to visit after getting a job</h2>
+  <ul>
+    <li data-ns-test="holidayList">Bali</li>
+    <li data-ns-test="holidayList">Switzerland</li>
+    <li data-ns-test="holidayList">Japan</li>
+  </ul>
 
 </body>
-
 </html>
